@@ -882,24 +882,24 @@ $config_data = array(
     'enable_unsharp' => array(
       'type'          => 'checkbox',
       'default_value' => '0',
-      'help_link'     => '',
+      'help_link'     => 'f=configuration.htm&amp;as=admin_picture_thumb_sharpening_enable&amp;ae=admin_picture_thumb_sharpening_enable_end',
     ),
     'unsharp_amount' => array(
       'type'          => 'textfield',
 	  'min'           => '0',
 	  'max'           => '999',
       'default_value' => '120',
-      'help_link'     => '',
+      'help_link'     => 'f=configuration.htm&amp;as=admin_picture_thumb_sharpening_amount&amp;ae=admin_picture_thumb_sharpening_amount_end',
       'regex'         => '^[0-9]{1,3}$',
       'size'          => '3',
       'width'         => '75',
       'maxlength'     => '3',
-      
+	  'end_description' => '%',
     ),
     'unsharp_radius' => array(
       'type'          => 'textfield',
       'default_value' => '0.5',
-      'help_link'     => '',
+      'help_link'     => 'f=configuration.htm&amp;as=admin_picture_thumb_sharpening_radius&amp;ae=admin_picture_thumb_sharpening_radius_end',
       'regex'         => '^[0-9]{1,1}([.]+([0-9]){0,1}){0,1}$',
       'size'          => '3',
       'width'         => '75',
@@ -910,7 +910,7 @@ $config_data = array(
 	  'min'             => '0',
 	  'max'             => '100',
       'default_value' => '3',
-      'help_link'     => '',
+      'help_link'     => 'f=configuration.htm&amp;as=admin_picture_thumb_sharpening_threshold&amp;ae=admin_picture_thumb_sharpening_threshold_end',
       'regex'         => '^[0-9]{1,3}$',
       'size'          => '3',
       'width'         => '75',
